--- a/start/client/public/style.css
+++ b/start/client/public/style.css
@@ -8,23 +8,55 @@ body {
   align-items: center;
   font-family: "Montserrat", sans-serif;
   margin: 50px;
-  background-color: #e7e7c5;
+  background-color: #f3f3e2;
 }
 
-.artwork-container img {
-  max-width: 40%;
+img {
+  width: 400px;
   max-height: 40%;
   border: solid white 6px;
+  margin: 0 30px;
+}
+
+hr {
+  margin: 10px;
+}
+
+.image-child img {
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  margin: 10px;
+  opacity: 0.6;
+}
+
+#answer {
+  display: flex;
+  flex-direction: column;
+}
+
+.image-child img:hover {
+  opacity: 1;
+}
+
+.image-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+  align-items: baseline;
 }
 
 button {
   background-color: #5b8c5a;
   color: whitesmoke;
   padding: 10px;
+  margin: 15px;
   width: 180px;
   height: 80px;
-  border: solid white 6px;
-  border-radius: 5px;
+  border: solid white 5px;
+  border-radius: 9px;
   text-transform: uppercase;
   font-size: 18px;
   font-weight: bold;
@@ -32,6 +64,7 @@ button {
 
 input {
   padding: 8px;
+  margin: 15px;
   text-align: left;
   width: 250px;
   font-size: 25px;
@@ -43,7 +76,7 @@ input {
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-evenly;
-  margin: 50px 0 50px 0;
+  margin: 50px 0 150px 0;
   max-height: 80%;
 }
 
@@ -66,13 +99,14 @@ p {
   font-size: 30px;
   color: #52414c;
   text-align: left;
+  margin: 0 15px 15px 15px;
 }
 
 table {
   border-collapse: collapse;
   width: 75%;
   background-color: white;
-  margin: 0 0 15px 0;
+  margin: 15px;
 }
 
 td,
@@ -83,4 +117,29 @@ th {
 
 .solution {
   font-size: 20px;
+}
+
+h1 {
+  text-align: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 50px;
+  color: #e3655b;
+  width: 50%;
+}
+
+.options {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px 0 50px 0;
+}
+
+#logo {
+  width: 200px;
+  border: none;
+  margin: 0;
+  position: absolute;
+  left: 0px;
+  top: 0px;
 }
