--- a/start/client/public/style.css
+++ b/start/client/public/style.css
@@ -8,12 +8,12 @@ body {
   align-items: center;
   font-family: "Montserrat", sans-serif;
   margin: 50px;
-  background-color: #f3f3e2;
+  background-color: #fbfbef;
 }
 
 img {
-  width: 400px;
-  max-height: 40%;
+  width: 500px;
+  max-height: 80%;
   border: solid white 6px;
   margin: 0 30px;
 }
@@ -33,6 +33,8 @@ hr {
 #answer {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  max-width: 80%;
 }
 
 .image-child img:hover {
@@ -53,13 +55,13 @@ button {
   color: whitesmoke;
   padding: 10px;
   margin: 15px;
-  width: 180px;
-  height: 80px;
-  border: solid white 5px;
+  width: 210px;
+  height: 70px;
+  border: solid white 1px;
   border-radius: 9px;
-  text-transform: uppercase;
-  font-size: 18px;
-  font-weight: bold;
+  /* text-transform: uppercase; */
+  font-size: 22px;
+  /* font-weight: bold; */
 }
 
 input {
@@ -75,8 +77,8 @@ input {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: space-evenly;
-  margin: 50px 0 150px 0;
+  justify-content: center;
+  margin: 50px 0 50px 0;
   max-height: 80%;
 }
 
@@ -90,29 +92,30 @@ footer {
   left: 0px;
   bottom: 0px;
   height: 15%;
-  background-color: #e3655b;
+  background-color: #2a5465;
   width: 100%;
 }
 
 label,
 p {
   font-size: 30px;
-  color: #52414c;
+  color: #8c5e58;
   text-align: left;
   margin: 0 15px 15px 15px;
 }
 
 table {
+  text-align: center;
   border-collapse: collapse;
-  width: 75%;
+  width: 45%;
   background-color: white;
-  margin: 15px;
+  margin: 30px auto 140px auto;
 }
 
 td,
 th {
   border: 1px solid #d9e5c7;
-  padding: 12px;
+  padding: 15px;
 }
 
 .solution {
@@ -143,3 +146,9 @@ h1 {
   left: 0px;
   top: 0px;
 }
+
+/* .origin {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+} */
